--- a/storescpfl@.service
+++ b/storescpfl@.service
@@ -2,6 +2,6 @@
 Description=DIT3 DICOM receiver service
 
 [Service]
-ExecStart=storescp -pm +uf --exec-sync --inetd -od /home/fuentes/wolfpacs/fl
+ExecStart=storescp -xs -fe .dcm --inetd -od '/home/fuentes/wolfpacs/fl' --exec-on-reception '/home/fuentes/wolfpacs/storeandorganize.sh #p/#f fl'
 StandardInput=socket
 User=fuentes
